# echora

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitmessage  .pre-commit-config.yaml  .trivyignore  AUDIT_REPORT.md  BUILD  CLAUDE.md  MONOREPO_MIGRATION_PLAN.md  README.md  anime_crawler.py  anime_planet_anime_crawler.py  anime_planet_character_crawler.py  anisearch_anime_crawler.py  anisearch_character_crawler.py  anisearch_episode_crawler.py  buf.yaml  character_crawler.py  improvement.md  one_piece_decompressed.xml  pants.toml  pyproject.toml  run_enrichment.py  test_output.txt  test_poc_with_real_data.py
.claude/commands/: add_commands.md  create-linear-issue.md  create_linear_issue.md  create_pr.md  issue.md  make-commit.md  review_comments.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: claude-code-review.yml  main_ci.yml  observability-smoke.yml  proto-release-assets.yml  proto-stubs-check.yml  security-scan.yml  trivy.yml
apps/agent_service/: BUILD  Dockerfile.dev  Dockerfile.prd
apps/enrichment_service/: BUILD  Dockerfile.dev  Dockerfile.prd
apps/service/: BUILD  Dockerfile.dev  Dockerfile.prd
apps/vector_service/: BUILD  Dockerfile.dev  Dockerfile.prd
assets/seed_data/: BUILD  anime_database.json
data/qdrant_storage/: BUILD  enriched_anime_database.json
docker/: Dockerfile  Dockerfile.dev  Dockerfile.prd  crawl4ai-config.yml  docker-compose.dev.yml  docker-compose.obs.scale.yml  docker-compose.obs.yml  docker-compose.prd.yml  docker-compose.prod.yml  docker-compose.yml
docker/observability/: alertmanager.yaml  loki-config.yaml  otel-collector-agent-config.yaml  otel-collector-config.yaml  otel-collector-gateway-config.yaml  prometheus-alert-rules.yaml  prometheus.yaml  tempo-config.yaml
docs/: AGENTIC_RAG_SPEC.md  Architecture Index.md  Architecture Overview.canvas  Database Schema.md  anidb_external_websites_mappings.md  anidb_type_mappings.md  architecture.md  cache_exception_handling_improvements.md  cache_improvements_plan.md  character_recognition_training.md  ci_cd_improvements.md  command_api.md  echora_contracts.md  embedding_model_initialization.md  enrichment_plan.md  event_adapter.md  event_driven_architecture.md  event_schema_specification.md  field_standardization_analysis.md  implementation_plan.md  implementation_plan_gaps.md  ingestion_pipeline.md  jikan_helper_refactoring_plan.md  k8s_deployment_plan.md  monorepo_branch_strategy.md  n8n_orchestration.md  observability.md  payload_filters_reference.md  postgres_integration_architecture_decision.md  product_requirement_docs.md  qdrant_ayload_filters.md  qdrant_client_breaking_refactor.md  qdrant_client_restructuring_plan.md  qdrant_payload_filters.md  relationship_types_research.md  reviewer_response_cache_improvements.md  source_api_field_mappings.md  stage5_visual_matching_implementation.md  syoboi_integration.md  technical.md  (+4 more)
docs/claude/: architecture.md  code-conventions.md  development-workflows.md  enrichment-pipeline.md  vector-db-operations.md
docs/plans/: 2026-02-10-postgres-qdrant-data-model-design.md
libs/common/: BUILD
libs/enrichment/: BUILD
libs/http_cache/: BUILD  README.md
libs/observability/: BUILD  README.md
libs/qdrant_db/: BUILD
libs/vector_db_interface/: BUILD
libs/vector_processing/: BUILD
protos/: admin.proto  admin_pb2.py  admin_pb2.pyi  admin_pb2_grpc.py  agent.proto  agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py  health_pb2.py  health_pb2_grpc.py
rules/: error-documentation.md  lessons-learned.md
scripts/: BUILD  analyze_db.py  assemble_enrichment.py  check_anime_model_proto_contract.py  collect_observability_load_evidence.py  find_duplicates.py  gen_protos.py  generate-proto.py  merge_duplicates.py  observability_smoke_check.py  populate_vector_observability.py  process_stage1_metadata.py  process_stage2_episodes.py  process_stage3_relationships.py  process_stage4_statistics.py  process_stage5_characters.py  reindex_anime_database.py  reorder_enrichment_fields.py  run_enrichment.py  test_search_methods.py  update_vectors.py  validate_enrichment_database.py  verify_refactor.py
src/: admin_service.py  agent_service.py  dependencies.py  globals.py  main.py  server.py
src/api/: admin.py  search.py
src/cache_manager/: README.md  aiohttp_adapter.py  async_redis_storage.py  config.py  http_caching.md  instance.py  manager.py  redis_storage.py  result_cache.py
src/config/: settings.py
src/enrichment/: README.md  ai_character_matcher.py
src/models/: anime.py
src/poc/: atomic_agents_poc.py
src/validation/: README.md  __init__.py  ab_testing.py  dataset_analyzer.py  embedding_quality.py  search_quality.py  vector_field_mapping.py  vector_system_validator.py
src/vector/: __init__.py  utils.py
stubs/crawl4ai/: __init__.pyi  async_crawler_strategy.pyi  models.pyi  types.pyi
stubs/fastembed/: __init__.pyi
stubs/hishel/: __init__.pyi  requests.pyi
stubs/imgutils/: __init__.pyi  metrics.pyi
stubs/numpy/: __init__.pyi
stubs/redis/: __init__.pyi  exceptions.pyi
stubs/sklearn/: __init__.pyi
stubs/torch/: __init__.pyi
stubs/validate_enrichment_database/: __init__.pyi
tasks/: active_context.md  tasks_plan.md
templates/: linear_bug.md  linear_chore.md  linear_feature.md  linear_refactor.md  linear_research.md
tests/: BUILD  conftest.py  conftest.py.backup  test_admin_service.py  test_agent_service.py  test_character_vector.py  test_comprehensive_episode.py  test_comprehensive_related.py  test_comprehensive_staff.py  test_comprehensive_title.py  test_comprehensive_vectors.py  test_globals.py  test_server.py
tests/cache_manager/: __init__.py  test_aiohttp_adapter.py  test_aiohttp_adapter_event_loop.py  test_async_redis_storage.py  test_config.py  test_manager.py  test_result_cache.py  test_result_cache_integration.py  test_result_cache_refactored.py
tests/integration/: BUILD  conftest.py  test_anilist_docker_redis.py  test_character_vector.py  test_comprehensive_staff.py  test_update_vectors.py
tests/scripts/: BUILD  __init__.py  test_process_stage2_episodes.py  (+3 more)
(+686 files in other folders)
