[project]
name = "anime-vector-service"
version = "0.1.0"
description = "Microservice for anime vector database operations with semantic search capabilities"
requires-python = ">=3.12"
dependencies = [
    # Core FastAPI dependencies
    "fastapi==0.115.13",
    "uvicorn==0.34.3",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.0",
    "python-dotenv>=1.1.0",
    # Vector database
    "qdrant-client[fastembed]==1.14.3",
    # Embedding models
    "sentence-transformers==5.0.0",
    "transformers==4.55.0",
    "torch>=2.0.0",
    "open-clip-torch>=2.29.0", # OpenCLIP for vision embeddings
    # Image processing
    "pillow>=11.2.1",
    # HTTP client for external requests
    "aiohttp==3.12.13",
    # Web scraping dependencies
    "cloudscraper>=1.2.71",
    "beautifulsoup4>=4.12.0",
    # Fine-tuning capabilities
    "peft==0.16.0",
    "huggingface-hub>=0.20.0", # For downloading from HuggingFace
    # HTTP dependencies
    "requests>=2.32.4",
    "rapidfuzz>=3.14.1",
    "jellyfish>=1.2.0",
    "jaconv>=0.4.0",
    "pykakasi>=2.3.0",
    "scikit-learn>=1.7.2",
    "crawl4ai>=0.7.4",
    # "dghs-imgutils>=0.4.6",  # Temporarily commented - conflicts with crawl4ai chardet dependency
]

[project.optional-dependencies]
dev = [
    # Testing dependencies
    "pytest>=8.2.0",
    "pytest-asyncio==1.0.0",
    "httpx>=0.28.1",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",

    # Development dependencies
    "mypy>=1.18.1",
    "ruff>=0.14.2",

    # Pre-commit hooks
    "pre-commit>=4.0.0",

    # Pretty output formatting
    "rich>=13.0.0",
    "pip-audit>=2.7.0",

    # Type stubs
    "scikit-learn-stubs>=0.0.3",
    "scipy-stubs>=1.16.2.0",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-pillow>=10.2.0.20240822",
    "types-python-dateutil>=2.9.0.20250822",
    "types-requests>=2.32.4.20250913",
    "types-setuptools>=80.9.0.20250822",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests (default)",
]

[tool.mypy]
mypy_path = "stubs"
