[project]
name = "anime-vector-service"
version = "0.1.0"
description = "Microservice for anime vector database operations with semantic search capabilities"
requires-python = ">=3.12"
dependencies = [
    # Core FastAPI dependencies
    "fastapi==0.115.13",
    "uvicorn==0.34.3",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.0",
    "python-dotenv>=1.1.0",
    # Vector database
    "qdrant-client[fastembed]==1.14.3",
    # Embedding models
    "sentence-transformers==5.0.0",
    "transformers==4.55.0",
    "torch>=2.0.0",
    "open-clip-torch>=2.29.0", # OpenCLIP for vision embeddings
    # Image processing
    "pillow>=11.2.1",
    # HTTP client for external requests
    "aiohttp==3.12.13",
    # Fine-tuning capabilities
    "peft==0.16.0",
    "huggingface-hub>=0.20.0", # For downloading from HuggingFace
    # HTTP dependencies
    "requests>=2.32.4",
    "hishel>=1.0.0,<2.0.0",
    "redis>=7.1.0,<8.0.0",
    "rapidfuzz>=3.14.1",
    "jellyfish>=1.2.0",
    "jaconv>=0.4.0",
    "pykakasi>=2.3.0",
    "scikit-learn>=1.7.2",
    "crawl4ai>=0.7.4",
    # "dghs-imgutils>=0.19.0",  # Temporarily commented - conflicts with crawl4ai chardet dependency
]

[project.optional-dependencies]
dev = [
    # Testing dependencies
    "pytest>=8.2.0",
    "pytest-asyncio==1.0.0",
    "httpx>=0.28.1",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",

    # Development dependencies
    "mypy>=1.18.1",
    "ruff==0.14.10",
    "types-requests>=2.32.0",

    # Pretty output formatting
    "rich>=13.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov=libs",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80"
]
markers = [
    "integration: marks tests as integration tests (require database, models, etc.)",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "ruff==0.14.10",
    "scikit-learn-stubs>=0.0.3",
    "scipy-stubs>=1.16.2.0",
    "types-pillow>=10.2.0.20240822",
    "types-python-dateutil>=2.9.0.20250822",
    "types-requests>=2.32.4.20250913",
    "types-setuptools>=80.9.0.20250822",
]

[tool.mypy]
mypy_path = "stubs"

[tool.ruff]
# Same as Black
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "htmlcov",
]

[tool.ruff.lint]
# Enable pycodestyle (E) and Pyflakes (F) codes by default
# Plus isort (I) for import sorting
select = ["E", "F", "I", "N", "UP", "W"]

# Never enforce these rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "N805",   # First argument should be `self` (false positive for Pydantic validators using `cls`)
    "UP047",  # Generic function type parameters (not needed for Python 3.12)
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N806", "N803", "E402", "F841", "F811"]  # Tests: allow uppercase vars/args, imports not at top, unused vars, redefinitions
"stubs/**/*.pyi" = ["N801", "N803", "UP046"]  # Stub files: allow non-CapWords names, uppercase args, Generic subclass patterns

# Exclude directories

[tool.ruff.format]
# Use double quotes (Black default)
quote-style = "double"

# Indent with spaces (Black default)
indent-style = "space"

# Respect magic trailing commas (Black default)
skip-magic-trailing-comma = false

